tdf#115416 allow build with classic libjpeg

Change-Id: I96252e1a78dbc52d21095e11b7bdb0807e5d76b6